# commands-db-ide

./: Makefile  README.rst  entry-points.txt  pyproject.toml
src/nagare/admin/: commands_db_ide.py
