# =-
# (C)opyright Net-ng 2008-2024
#
# This is Net-ng proprietary source code
# Any reproduction modification or use without prior written
# approval from Net-ng is strictly forbidden.
# =-

[build-system]
requires = ['setuptools', 'wheel', 'setuptools_scm']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]

[project]
name = 'nagare-commands-db-ide'
dynamic = ['version', 'entry-points']
description = 'Nagare database IDE'
authors = [{ name = 'Net-ng' }, { email = 'contact@net-ng.com' }]
license = { file = 'LICENSE.txt' }
requires-python = '>=3.7'
dependencies = ['harlequin[postgres,mysql]', 'nagare-services-database']

[project.readme]
file = 'README.rst'
content-type = 'text/x-rst'

[tool.setuptools.dynamic]
entry-points = { file = 'entry-points.txt' }

[project.optional-dependencies]
dev = [
    'sphinx',
    'sphinx_rtd_theme',
    'pre-commit',
    'ruff',
    'pytest',
    'build',
    'twine',
]

[project.urls]
Homepage = 'https://nagare.org'
Documentation = 'https://nagare.org/doc'
Source = 'https://github.com/nagareproject/commands-db-ide'
Tracker = 'https://github.com/nagareproject/commands-db-ide/issues'

[tool.ruff]
src = ['src']
line-length = 120
format.quote-style = 'single'

[tool.ruff.lint]
select = [
    'C4',
    'COM',
    'D',
    'E',
    'ERA',
    'F',
    'I',
    'ISC',
    'INP',
    'PIE',
    'Q',
    'S',
    'SIM',
    'TID',
    'W',
    'YTT',
]
ignore = ['COM812', 'D10', 'C408', 'ISC001']
isort.length-sort = true
pydocstyle.convention = 'google'
flake8-quotes.inline-quotes = 'single'

[tool.pytest.ini_options]
addopts = '-p no:warnings'
testpaths = ['tests']
